--- a/Vocable/Features/Settings/TimingSensitivity/Views/SensitivityCollectionViewCell.xib
+++ b/Vocable/Features/Settings/TimingSensitivity/Views/SensitivityCollectionViewCell.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="ogd-WG-kCh" customClass="SensitivityCollectionViewCell" customModule="Vocable" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="626" height="210"/>
+            <rect key="frame" x="0.0" y="0.0" width="666" height="268"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jXY-FR-aZd">
-                <rect key="frame" x="0.0" y="0.0" width="626" height="210"/>
+                <rect key="frame" x="0.0" y="0.0" width="666" height="268"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cursor Sensitivity" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="PJa-d1-ik7">
@@ -23,25 +23,25 @@
                         <color key="textColor" name="DefaultFontColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e0s-dp-HQO" userLabel="Top Separator">
-                        <rect key="frame" x="20" y="44" width="586" height="2"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e0s-dp-HQO">
+                        <rect key="frame" x="20" y="44" width="626" height="2"/>
                         <color key="backgroundColor" name="DefaultCellBackground"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="SV7-Ip-ZrN"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DYW-L9-31N" userLabel="Bottom Separator">
-                        <rect key="frame" x="20" y="174" width="586" height="2"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DYW-L9-31N">
+                        <rect key="frame" x="20" y="232" width="626" height="2"/>
                         <color key="backgroundColor" name="DefaultCellBackground"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="BoX-I5-7O0"/>
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="O5j-z4-VrA">
-                        <rect key="frame" x="20" y="97.5" width="586" height="58.5"/>
+                        <rect key="frame" x="20" y="97.5" width="626" height="116.5"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ph1-lE-gZj" customClass="GazeableSegmentedButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="2" width="192" height="55"/>
+                                <rect key="frame" x="0.0" y="31" width="205.5" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="j1g-Cd-qVb"/>
                                 </constraints>
@@ -61,7 +61,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PDi-eA-7a0" customClass="GazeableSegmentedButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="197" y="2" width="192" height="55"/>
+                                <rect key="frame" x="210.5" y="31" width="205" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="b7m-b2-4tl"/>
                                 </constraints>
@@ -81,7 +81,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4K-JS-vwn" customClass="GazeableSegmentedButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="394" y="2" width="192" height="55"/>
+                                <rect key="frame" x="420.5" y="31" width="205.5" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="kG5-sF-Ej8"/>
                                 </constraints>
@@ -119,7 +119,7 @@
                 </constraints>
                 <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="0.0" right="8"/>
             </collectionViewCellContentView>
-            <size key="customSize" width="626" height="210"/>
+            <size key="customSize" width="666" height="268"/>
             <connections>
                 <outlet property="bottomSeparator" destination="DYW-L9-31N" id="zod-S1-7Sv"/>
                 <outlet property="highSensitivityButton" destination="J4K-JS-vwn" id="Gf5-3Y-IEW"/>
@@ -127,7 +127,7 @@
                 <outlet property="mediumSensitivityButton" destination="PDi-eA-7a0" id="uCt-S2-XmX"/>
                 <outlet property="topSeparator" destination="e0s-dp-HQO" id="oO4-tu-T1l"/>
             </connections>
-            <point key="canvasLocation" x="465.21739130434787" y="121.20535714285714"/>
+            <point key="canvasLocation" x="494.20289855072468" y="139.28571428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
