--- a/Vocable/Features/Settings/EditCategories/EditCategories.storyboard
+++ b/Vocable/Features/Settings/EditCategories/EditCategories.storyboard
@@ -68,9 +68,8 @@
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                             </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZPM-Ab-mlI">
-                                <rect key="frame" x="32" y="152" width="1130" height="565"/>
+                                <rect key="frame" x="32" y="152" width="1130" height="512"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="ZPM-Ab-mlI" secondAttribute="height" multiplier="2" priority="250" id="PK4-eE-9mZ"/>
                                     <constraint firstAttribute="height" constant="322.5" id="V2b-Pm-qsk"/>
                                 </constraints>
                                 <variation key="default">
@@ -78,21 +77,11 @@
                                         <exclude reference="V2b-Pm-qsk"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="PK4-eE-9mZ"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="PK4-eE-9mZ"/>
-                                    </mask>
-                                </variation>
                                 <connections>
                                     <segue destination="W98-u1-6GB" kind="embed" identifier="CarouselCollectionViewController" id="YT0-TB-czc"/>
                                 </connections>
                             </containerView>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xsL-XA-YD7" customClass="PaginationView" customModule="Vocable" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xsL-XA-YD7" customClass="PaginationView" customModule="Vocable" customModuleProvider="target">
                                 <rect key="frame" x="380.5" y="688" width="433.5" height="94"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="aHj-3P-gGo"/>
@@ -119,7 +108,7 @@
                             <constraint firstItem="xsL-XA-YD7" firstAttribute="centerX" secondItem="XHU-T2-eKa" secondAttribute="centerX" id="mJ1-dp-N83"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZPM-Ab-mlI" secondAttribute="trailing" id="nDS-NG-TAP"/>
                             <constraint firstItem="FaL-BL-aEw" firstAttribute="top" secondItem="XHU-T2-eKa" secondAttribute="topMargin" id="o1A-wb-z5y"/>
-                            <constraint firstItem="xsL-XA-YD7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ZPM-Ab-mlI" secondAttribute="bottom" constant="16" id="odn-ZR-Jtm">
+                            <constraint firstItem="xsL-XA-YD7" firstAttribute="top" secondItem="ZPM-Ab-mlI" secondAttribute="bottom" constant="16" id="odn-ZR-Jtm">
                                 <variation key="heightClass=regular-widthClass=regular" constant="24"/>
                             </constraint>
                             <constraint firstItem="KsA-J6-p6N" firstAttribute="bottom" secondItem="xsL-XA-YD7" secondAttribute="bottom" constant="32" id="pdv-ax-cnJ">
@@ -241,14 +230,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Ql4-Sb-Tqo">
-                                <rect key="frame" x="20" y="211" width="1154" height="603"/>
-                                <connections>
-                                    <segue destination="1Ka-UQ-NO5" kind="embed" id="I8E-i9-qv4"/>
-                                </connections>
-                            </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bhv-Ll-Ibf" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="20" y="32" width="104" height="96"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bhv-Ll-Ibf" userLabel="Back Button" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
+                                <rect key="frame" x="32" y="32" width="104" height="96"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="104" id="7nx-C3-iVu">
                                         <variation key="heightClass=compact" constant="63"/>
@@ -271,42 +254,63 @@
                                     <action selector="backButtonPressed:" destination="6hz-tb-yd2" eventType="primaryActionTriggered" id="25W-FQ-stj"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Sb3-QR-EDr">
-                                <rect key="frame" x="20" y="152" width="246.5" height="41"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                <color key="textColor" name="DefaultFontColor"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" hidden="YES"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZe-iv-ZgI" userLabel="EditButton" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="1144" y="152" width="30" height="30"/>
-                                <color key="tintColor" name="DefaultFontColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="image" keyPath="buttonImage" value="pencil" catalog="system"/>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
-                                        <color key="value" name="Background"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NGL-9m-pbg" userLabel="Top Bar View">
+                                <rect key="frame" x="32" y="152" width="1130" height="41"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Sb3-QR-EDr">
+                                        <rect key="frame" x="0.0" y="0.0" width="1084" height="41"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                        <color key="textColor" name="DefaultFontColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZe-iv-ZgI" userLabel="Edit Button" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
+                                        <rect key="frame" x="1092" y="0.0" width="38" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="38" id="W2F-kz-XX5"/>
+                                            <constraint firstAttribute="height" constant="41" id="hvB-0q-JJ8"/>
+                                        </constraints>
+                                        <color key="tintColor" name="DefaultFontColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="image" keyPath="buttonImage" value="pencil" catalog="system"/>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
+                                                <color key="value" name="Background"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="editButtonPressed:" destination="6hz-tb-yd2" eventType="primaryActionTriggered" id="ggX-Qt-Mkk"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Sb3-QR-EDr" secondAttribute="bottom" id="6q7-n6-neF"/>
+                                    <constraint firstItem="Sb3-QR-EDr" firstAttribute="top" secondItem="NGL-9m-pbg" secondAttribute="top" id="Q2P-uG-lxr"/>
+                                    <constraint firstItem="hZe-iv-ZgI" firstAttribute="centerY" secondItem="NGL-9m-pbg" secondAttribute="centerY" id="Z78-TA-sAL"/>
+                                    <constraint firstItem="hZe-iv-ZgI" firstAttribute="leading" secondItem="Sb3-QR-EDr" secondAttribute="trailing" constant="8" id="dRC-6v-Zka"/>
+                                    <constraint firstAttribute="trailing" secondItem="hZe-iv-ZgI" secondAttribute="trailing" id="fJq-0B-qB0"/>
+                                    <constraint firstItem="Sb3-QR-EDr" firstAttribute="leading" secondItem="NGL-9m-pbg" secondAttribute="leading" id="jbz-bT-ggy"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Ql4-Sb-Tqo">
+                                <rect key="frame" x="32" y="201" width="1130" height="613"/>
                                 <connections>
-                                    <action selector="editButtonPressed:" destination="6hz-tb-yd2" eventType="primaryActionTriggered" id="ggX-Qt-Mkk"/>
+                                    <segue destination="1Ka-UQ-NO5" kind="embed" id="I8E-i9-qv4"/>
                                 </connections>
-                            </button>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" name="Background"/>
                         <constraints>
-                            <constraint firstItem="Sb3-QR-EDr" firstAttribute="top" secondItem="Bhv-Ll-Ibf" secondAttribute="bottom" constant="24" id="4od-oE-aIU"/>
-                            <constraint firstItem="Bhv-Ll-Ibf" firstAttribute="leading" secondItem="Ql4-Sb-Tqo" secondAttribute="leading" id="Hdh-9Z-NCL"/>
-                            <constraint firstItem="hZe-iv-ZgI" firstAttribute="top" secondItem="Bhv-Ll-Ibf" secondAttribute="bottom" constant="24" id="Rji-rB-dDJ">
+                            <constraint firstItem="NGL-9m-pbg" firstAttribute="top" secondItem="Bhv-Ll-Ibf" secondAttribute="bottom" constant="24" id="0bL-v1-n1I">
                                 <variation key="heightClass=compact" constant="16"/>
                                 <variation key="widthClass=compact" constant="16"/>
                             </constraint>
-                            <constraint firstItem="1FZ-FF-jZn" firstAttribute="bottom" secondItem="Ql4-Sb-Tqo" secondAttribute="bottom" id="UmB-dH-d0O"/>
-                            <constraint firstItem="Sb3-QR-EDr" firstAttribute="leading" secondItem="Bhv-Ll-Ibf" secondAttribute="leading" id="WrI-vN-nxZ"/>
-                            <constraint firstItem="Ql4-Sb-Tqo" firstAttribute="top" secondItem="Sb3-QR-EDr" secondAttribute="bottom" constant="18" id="ZTv-Kn-5XZ"/>
+                            <constraint firstItem="Bhv-Ll-Ibf" firstAttribute="leading" secondItem="6iL-6J-UCo" secondAttribute="leadingMargin" id="3eB-Dn-WXE"/>
+                            <constraint firstItem="Ql4-Sb-Tqo" firstAttribute="top" secondItem="NGL-9m-pbg" secondAttribute="bottom" constant="8" id="LS2-8C-NVt"/>
+                            <constraint firstItem="NGL-9m-pbg" firstAttribute="leading" secondItem="6iL-6J-UCo" secondAttribute="leadingMargin" id="Msj-62-yQE"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Ql4-Sb-Tqo" secondAttribute="bottom" id="UmB-dH-d0O"/>
                             <constraint firstItem="Ql4-Sb-Tqo" firstAttribute="leading" secondItem="6iL-6J-UCo" secondAttribute="leadingMargin" id="bSg-C8-B7P"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NGL-9m-pbg" secondAttribute="trailing" id="p50-Zm-kfd"/>
                             <constraint firstItem="Bhv-Ll-Ibf" firstAttribute="top" secondItem="1FZ-FF-jZn" secondAttribute="top" constant="32" id="sdT-D3-p9C"/>
                             <constraint firstItem="Ql4-Sb-Tqo" firstAttribute="trailing" secondItem="6iL-6J-UCo" secondAttribute="trailingMargin" id="wrb-RB-JOr"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hZe-iv-ZgI" secondAttribute="trailing" id="yD0-iI-6cA"/>
                         </constraints>
                         <edgeInsets key="layoutMargins" top="0.0" left="32" bottom="0.0" right="32"/>
                         <viewLayoutGuide key="safeArea" id="1FZ-FF-jZn"/>
@@ -331,7 +335,7 @@
             <objects>
                 <collectionViewController id="1Ka-UQ-NO5" customClass="EditCategoryDetailCollectionViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" id="Mo2-nO-4m2">
-                        <rect key="frame" x="0.0" y="0.0" width="1154" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1130" height="613"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZWC-hZ-Hc6">
